--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -17,14 +17,15 @@ input {
 }
 
 $fontColor: #24292e !global;
-
-
 $themeColor: #d14424;
 $textColor: #41464b;
 $borderColor: #eee;
 $lightGray: #f9f9f9;
 $backgroundColor: #f5f6f7;
-
 $boxShadow: 3px 3px 3px rgba(#000, 0.15);
-
 $borderRadius: 2px;
+
+.custom-tip-tap-image{
+  display: block;
+  margin: 0 auto;
+}
