--- a/src/style/tiptap.common.scss
+++ b/src/style/tiptap.common.scss
@@ -13,6 +13,11 @@
       line-height: 1.1;
     }
 
+    blockquote {
+      padding-left: 1rem;
+      border-left: 3px solid rgba(#0D0D0D, 0.1);
+    }
+
     .mention {
       color: #A975FF;
       cursor: pointer;
