--- a/src/style/tiptap.common.scss
+++ b/src/style/tiptap.common.scss
@@ -1,3 +1,31 @@
+@mixin tiptap-style {
+  text-align: left;
+  text-indent: 10px;
+  outline: none;
+  padding: 20px;
+
+  > * + * {
+    margin-top: 0.75em;
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    line-height: 1.1;
+  }
+
+  blockquote {
+    padding-left: 1rem;
+    border-left: 3px solid rgba(#0D0D0D, 0.1);
+  }
+
+  &::v-deep(.mention) {
+    color: #A975FF;
+    cursor: pointer;
+    background-color: rgba(#A975FF, 0.1);
+    border-radius: 0.3rem;
+    padding: 0.1rem 0.3rem;
+  }
+}
+
 .tip-tap-editor {
   & ::v-deep(.ProseMirror) {
     text-align: left;
