--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -17,6 +17,11 @@ input {
   position: absolute;
 }
 
+.no-break-line-text {
+  overflow:hidden; //超出的文本隐藏
+  text-overflow:ellipsis; //溢出用省略号显示
+  white-space:nowrap; //溢出不换行
+}
 
 $themeColor: #d14424;
 $textColor: #41464b;
