perf(editor): 提交富文本

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -59,7 +59,7 @@ $borderColor: #f0f0f0;
 
 //------背景色-----
 // hover背景色
-$hoverBackColor: #eff0f0;
+$hoverBackColor: #e7e9e8;
 
 $tabBackgroundColor: #f9f9f9;
 // 通用header 背景色
