perf(page): 优化页面样式

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -66,7 +66,9 @@ $tabBackgroundColor: #f9f9f9;
 $headerBackgroundColor: #fafbfc;
 // 页面底色
 //$contentBackgroundColor: #f5f6f7;
-$contentBackgroundColor: #FFF;
+$contentBackgroundColor: #fafafa;
+
+$editorBackgroundColor: #FFF;
 // list item高亮背景色
 $highlightBackgroundColor: #1790ff;
 // 富文本
