--- a/src/style/index.css
+++ b/src/style/index.css
@@ -130,4 +130,23 @@ th{
 }
 
 
+*::-webkit-scrollbar {
+    width: 8px;
+    height: 8px
+}
+
+*::-webkit-scrollbar-track {
+    background-color: transparent
+}
+
+*::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: #adb0b8;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #8a8e99;
+}
+
+
 
