perf(repo): 优化repo页面

--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -80,6 +80,25 @@ $textBackgroundColor: #FFF;
   cursor: pointer;
 }
 
+@mixin custom-scroll-style {
+  &::-webkit-scrollbar {
+    width: 8px;
+    height: 8px
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: transparent
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    background-color: #adb0b8;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #8a8e99;
+  }
+}
 .custom-input-style {
   ::v-deep(.ant-input) {
     background: #FFFFFF !important;
