--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -58,7 +58,7 @@ $titleFontColor: #24292f;
 $lightFontColor: #8b8c8f;
 
 // border颜色
-$borderColor: #f0f0f0;
+$borderColor: #eff0f0;
 
 //------背景色-----
 // hover背景色
