--- a/src/views/knowledge-editor/style/knowledge.edit.scss
+++ b/src/views/knowledge-editor/style/knowledge.edit.scss
@@ -5,12 +5,12 @@
   background: #FFFFFF;
   max-width: 850px;
   margin: 0 auto 15px;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .05);
-
+  //box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .05);
+  box-shadow: 0 0 3px rgba(0, 0, 0, .2);
   .header {
     height: 50px;
     line-height: 50px;
-    padding: 0 20px;
+    padding: 0 12px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -20,7 +20,7 @@
 
     .title {
       font-size: 16px;
-      font-weight: bold;
+      font-weight: 600;
     }
 
     .right {
