--- a/src/style/tiptap.common.scss
+++ b/src/style/tiptap.common.scss
@@ -228,6 +228,14 @@
       margin-bottom: 0.5em;
     }
 
+    @for $i from 1 through 7 /* max-indent */ {
+      $indent-margin-base: 30px;
+
+      *[data-indent='#{$i}'] {
+        margin-left: $indent-margin-base * $i !important;
+      }
+    }
+
     @include tiptap-placeholder-style;
 
     @include tiptap-bubble-menu-style;
