--- a/src/style/tiptap.common.scss
+++ b/src/style/tiptap.common.scss
@@ -216,6 +216,147 @@
     outline: none;
     //padding: 20px;
 
+    img {
+      display: inline-block;
+      float: none;
+      margin: 12px 0;
+      max-width: 100%;
+
+      &[data-display='inline'] {
+        margin-left: 12px;
+        margin-right: 12px;
+      }
+
+      &[data-display='block'] {
+        display: block;
+      }
+
+      &[data-display='left'] {
+        float: left;
+        margin-left: 0;
+        margin-right: 12px;
+      }
+
+      &[data-display='right'] {
+        float: right;
+        margin-left: 12px;
+        margin-right: 0;
+      }
+    }
+
+    .image-view {
+      $root: &;
+
+      display: inline-block;
+      float: none;
+      line-height: 0;
+      margin: 12px 0;
+      max-width: 100%;
+      user-select: none;
+      vertical-align: baseline;
+
+      &--inline {
+        margin-left: 12px;
+        margin-right: 12px;
+      }
+
+      &--block {
+        display: block;
+      }
+
+      &--left {
+        float: left;
+        margin-left: 0;
+        margin-right: 12px;
+      }
+
+      &--right {
+        float: right;
+        margin-left: 12px;
+        margin-right: 0;
+      }
+
+      &__body {
+        clear: both;
+        display: inline-block;
+        max-width: 100%;
+        outline-color: transparent;
+        outline-style: solid;
+        outline-width: 2px;
+        transition: all 0.2s ease-in;
+        position: relative;
+
+        &:hover {
+          outline-color: #ffc83d;
+        }
+
+        &--focused:hover,
+        &--resizing:hover {
+          outline-color: transparent;
+        }
+
+        &__placeholder {
+          height: 100%;
+          left: 0;
+          position: absolute;
+          top: 0;
+          width: 100%;
+          z-index: -1;
+        }
+
+        &__image {
+          cursor: pointer;
+          margin: 0;
+        }
+      }
+    }
+
+    .image-resizer {
+      border: 1px solid $themeColor;
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      z-index: 1;
+
+      &__handler {
+        background-color: $themeColor;
+        border: 1px solid #FFF;
+        border-radius: 2px;
+        box-sizing: border-box;
+        display: block;
+        height: 12px;
+        position: absolute;
+        width: 12px;
+        z-index: 2;
+
+        &--tl {
+          cursor: nw-resize;
+          left: -6px;
+          top: -6px;
+        }
+
+        &--tr {
+          cursor: ne-resize;
+          right: -6px;
+          top: -6px;
+        }
+
+        &--bl {
+          bottom: -6px;
+          cursor: sw-resize;
+          left: -6px;
+        }
+
+        &--br {
+          bottom: -6px;
+          cursor: se-resize;
+          right: -6px;
+        }
+      }
+    }
+
     .is-empty::before {
       content: attr(data-placeholder);
       float: left;
@@ -226,6 +367,7 @@
 
     p {
       margin-bottom: 0.5em;
+
     }
 
     @for $i from 1 through 7 /* max-indent */ {
