--- a/src/style/tiptap.common.scss
+++ b/src/style/tiptap.common.scss
@@ -126,9 +126,9 @@
 
 @mixin tiptap-mention-style {
   .mention {
-    color: #A975FF;
+    color: $themeColor;
     cursor: pointer;
-    background-color: rgba(#A975FF, 0.1);
+    background-color: rgba($themeColor, 0.1);
     border-radius: 0.3rem;
     padding: 0.1rem 0.3rem;
   }
